dockerimagesloaded-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dockerimagesloaded
  labels:
    name: dockerimagesloaded
