namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-site
  labels:
    name: shopping-site
